<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:id="@+id/layout"
    android:background="#ccc">

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/remember"
        android:id="@+id/checkBox"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="159dp"
        android:checked="false" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:id="@+id/loginButton"
        android:layout_marginTop="41dp"
        android:layout_alignTop="@+id/checkBox"
        android:layout_alignParentStart="true"
        android:onClick="submitUserInfo"/>

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/userText"
        android:layout_above="@+id/passText"
        android:layout_centerHorizontal="true"
        android:hint="@string/user"
        android:singleLine="true"
        android:imeOptions="actionNext"/>

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/passText"
        android:singleLine="true"
        android:layout_above="@+id/checkBox"
        android:layout_centerHorizontal="true"
        android:hint="@string/pass" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/login_text"
        android:id="@+id/textView1"
        android:layout_above="@+id/userText"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="39dp"
        android:textColor="#000" />

</RelativeLayout>
